--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,10 +38,16 @@
             android:name=".admin.OpenCsvFileActivity"
             android:label="@string/title_open_csv_file"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
+            <intent-filter
+                android:label="import">
                 <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="application/pdf" />
+                <action android:name="android.intent.action.PICK" />
+                <action android:name="android.intent.action.PICK_ACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:scheme="file" />
+                <data android:scheme="content" />
+                <data android:mimeType="text/csv" />
+                <data android:mimeType="text/comma-separated-values" />
             </intent-filter>
         </activity>
         <activity android:name=".analysis.team.TeamAnalysisActivity" />
