--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,17 +27,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter
-                android:label="import">
-                <action android:name="android.intent.action.VIEW" />
-                <action android:name="android.intent.action.PICK" />
-                <action android:name="android.intent.action.PICK_ACTIVITY" />
-                <category android:name="android.intent.category.DEFAULT"/>
-                <data android:scheme="file" />
-                <data android:scheme="content" />
-                <data android:mimeType="text/csv" />
-                <data android:mimeType="text/comma-separated-values" />
-            </intent-filter>
         </activity>
         <activity android:name=".bluetooth.BluetoothSetMasterDeviceActivity" />
         <activity android:name=".bluetooth.BluetoothChildDevicesActivity" />
@@ -48,7 +37,19 @@
         <activity
             android:name=".admin.ImportCsvActivity"
             android:label="@string/title_open_csv_file"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".MainActivity">
+            <intent-filter
+                android:label="Import CSV">
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.PICK" />
+                <action android:name="android.intent.action.PICK_ACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:scheme="file" />
+                <data android:scheme="content" />
+                <data android:mimeType="text/csv" />
+                <data android:mimeType="text/comma-separated-values" />
+            </intent-filter>
         </activity>
         <activity android:name=".analysis.team.TeamAnalysisActivity" />
         <activity android:name=".analysis.attribute.AttributeAnalysisActivity" />
