--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".match.sandstorm.SandstormActivity" />
         <activity android:name=".pit.PitActivity" />
         <activity android:name=".admin.AdminActivity" />
         <activity
