--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity android:name=".match.sandstorm.SandstormActivity" />
         <activity android:name=".match.cycle.CycleActivity" />
+        <activity android:name=".match.endgame.EndgameActivity" />
         <activity android:name=".pit.PitActivity" />
         <activity android:name=".admin.AdminActivity" />
         <activity
