--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".deepspace.match.sandstorm.SandstormActivity" />
+        <activity android:name=".deepspace.match.cycle.CycleActivity" />
+        <activity android:name=".deepspace.match.endgame.EndgameActivity" />
+        <activity android:name=".deepspace.pit.PitActivity" />
         <activity
             android:name="com.frc107.vanguard.core.csvimport.ImportCsvActivity"
             android:label="@string/title_open_csv_file"
